--- a/src/pages/HomePage/AboutProject/AboutProject.scss
+++ b/src/pages/HomePage/AboutProject/AboutProject.scss
@@ -1,12 +1,12 @@
-.story {
-    height: 790px;
-    position: relative;
-  }
+.about_project {
+  height: 730px;
+  position: relative;
   
-  .text {
+  &__text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
   }
+}
