--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -17,12 +17,14 @@
 }
 
 %body-text {
+  font-family: Inter, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
 }
 
 %link {
+  font-family: Din, sans-serif;
   font-size: 32px;
   font-style: normal;
   line-height: normal;
