--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,3 +23,23 @@
     }
   }
 }
+
+@mixin mq($size: '320', $type: '<', $size-next: null) {
+  @if ($type == '<') {
+    @media (max-width: #{$size}px) {
+      @content;
+    }
+  }
+
+  @if ($type == '>') {
+    @media (min-width: #{$size}px) {
+      @content;
+    }
+  }
+
+  @if ($type == '<>') {
+    @media screen and (min-width: #{$size}px) and (max-width: #{$size-next}px) {
+      @content;
+    }
+  }
+}
