--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -4,7 +4,6 @@
   font-style: normal;
   font-weight: normal;
   line-height: normal;
-
   text-transform: uppercase;
 }
 
@@ -33,15 +32,15 @@
 }
 
 .small-text {
+  font-family: Inter, sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
 }
 
 .big-text {
-  color: #FFF;
-  text-align: center;
   font-family: Inter, sans-serif;
+  text-align: center;
   font-size: 64px;
   font-style: normal;
   font-weight: 500;
