--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,4 +5,12 @@ $white: #fff;
 $cream: #e8c083;
 $golden: linear-gradient(338deg, #FADA68 6.94%, rgba(250, 218, 104, 0.44) 102.43%, rgba(250, 218, 104, 0.00) 178.02%);
 $grey: #adc2c5;
-$dark-grey: #2f2f2f
+$dark-grey: #2f2f2f;
+
+/* -- Media Query Breakpoints -- */
+$phone: 320;
+$phablet: 576;
+$tablet: 768;
+$tablet-large: 992;
+$laptop: 1199;
+$desktop: 1440;
