--- a/src/pages/HomePage/Hero/Hero.scss
+++ b/src/pages/HomePage/Hero/Hero.scss
@@ -2,8 +2,8 @@
 
 .hero {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(14, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   gap: 20px;
   justify-content: center;
   height: 910px;
@@ -42,7 +42,7 @@
     flex-direction: column;
     gap: 16px;
 
-    grid-row: 2/4;
+    grid-row: 3/4;
     grid-column: 2/7;
 
     &_top {
@@ -80,7 +80,7 @@
       height: 80px;
       color: $white;
       text-transform: uppercase;
-      width: 500px;
+      max-width: 319px;
       background: linear-gradient(
         90deg,
         #ea4646 6.07%,
@@ -104,8 +104,8 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
-    grid-row: 2/4;
-    grid-column: 8/12;
+    grid-row: 3/4;
+    grid-column: 10/14;
 
     h1,
     h2 {
@@ -115,6 +115,16 @@
     &_title {
       text-wrap: nowrap;
     }
+
+    &__buttons {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      flex-direction: row;
+      align-content: flex-start;
+      justify-content: space-between;
+    }
+  
 
     &_link {
       border: 1px solid $white;
@@ -141,6 +151,7 @@
         position: relative;
         z-index: 0;
         transition: all 0.3s ease;
+        padding: 8px;
 
         &:hover {
           color: $black;
