--- a/src/pages/HomePage/Hero/Hero.scss
+++ b/src/pages/HomePage/Hero/Hero.scss
@@ -6,12 +6,11 @@
   grid-template-rows: repeat(5, 1fr);
   gap: 20px;
   justify-content: center;
-  height: 910px;
-  margin: 0 auto;
+  margin: 7vw auto 0;
 
   &__under_header {
     grid-row: 1;
-    grid-column: 9/12;
+    grid-column: 11/14;
     margin-top: 14px;
     text-align: center;
     background: $golden;
@@ -25,12 +24,12 @@
     width: 98px;
     height: 88px;
     justify-self: center;
-    align-self: center;
+    align-self: end;
 
     transition: all 0.2s ease;
 
     grid-row: 1;
-    grid-column: 1/2;
+    grid-column: 1/3;
 
     &:hover {
       opacity: 0.5;
