--- a/src/pages/RoadMap/Head/Head.scss
+++ b/src/pages/RoadMap/Head/Head.scss
@@ -3,9 +3,11 @@
 .head {
   height: 520px;
   display: flex;
+  margin-top: 90px;
 
   @include mq($tablet-large) {
-    height: 80vh;
+    margin-top: 0;
+    height: 100vh;
     max-height: 800px;
   }
 
@@ -23,7 +25,7 @@
     width: 300px;
 
     @include mq($tablet-large) {
-      top: 13vh;
+      top: 26vh;
       left: 10vw;
     }
   }
@@ -32,11 +34,15 @@
     align-self: flex-end;
     margin-left: 50px;
 
+    @include mq($tablet) {
+      display: none;
+    }
+
     &_title {
       margin-bottom: 16px;
 
       font-weight: bold;
-      letter-spacing: 4.48px;
+      letter-spacing: 0.5vw;
       text-transform: uppercase;
       font-family: Inter, sans-serif;
     }
