--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -47,3 +47,23 @@ button, input[type="button"], input[type="submit"], input[type="reset"] {
   font: inherit;
   color: inherit;
 }
+
+html.lenis {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
