--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -9,7 +9,7 @@
 
 %h2 {
   font-family: Din, sans-serif;
-  font-size: 36px;
+  font-size: 2.5vw;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
@@ -24,7 +24,8 @@
 
 %link {
   font-family: Din, sans-serif;
-  font-size: 32px;
+  // font-size: 32px;
+  font-size: 2.3vw;
   font-style: normal;
   line-height: normal;
   font-weight: 400;
@@ -41,7 +42,7 @@
 .big-text {
   font-family: Inter, sans-serif;
   text-align: center;
-  font-size: 64px;
+  font-size: 5vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
