--- a/src/components/Header/Navigation/NavList/NavList.scss
+++ b/src/components/Header/Navigation/NavList/NavList.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 9vh 4vw 3vh 2vw;
+  padding: 9vw 4vw 3vh 2vw;
   height: 100%;
   box-sizing: border-box;
 
