--- a/src/pages/RoadMap/Footer/Footer.scss
+++ b/src/pages/RoadMap/Footer/Footer.scss
@@ -15,15 +15,17 @@
   }
 
   &__bottom {
-    margin-top: 60px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    max-width: 80%;
+    margin: 60px auto;
+    gap: 2vw;
+    flex-wrap: wrap;
+    text-align: center;
 
-    @include mq($laptop) {
+    @include mq() {
       flex-direction: column;
-      gap: 20px;
-      text-align: center;
     }
   }
 
@@ -32,6 +34,12 @@
     text-transform: uppercase;
     display: flex;
     gap: 10px;
+
+    @include mq() {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 3vw;
+    }
   }
 
   &__link {
