--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,30 +1,6 @@
-@mixin hoverForLinks($bgColor, $hoverTextColor: 'none') {
-  position: relative;
+@import "./variables";
 
-  &::after{
-    content: "";
-    background: $bgColor;
-    mix-blend-mode: exclusion;
-    width: 100%;
-    height: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: all .2s ease;
-  }
-
-  &:hover::after{
-    height: 100%;
-  }
-
-  @if($hoverTextColor != 'none') {
-    &:hover {
-      color: $hoverTextColor;
-    }
-  }
-}
-
-@mixin mq($size: '320', $type: '<', $size-next: null) {
+@mixin mq($size: $tablet, $type: '<', $size-next: null) {
   @if ($type == '<') {
     @media (max-width: #{$size}px) {
       @content;
@@ -40,6 +16,35 @@
   @if ($type == '<>') {
     @media screen and (min-width: #{$size}px) and (max-width: #{$size-next}px) {
       @content;
+    }
+  }
+}
+
+@mixin hoverForLinks($bgColor, $hoverTextColor: 'none') {
+  @include mq($tablet, '>') {
+    position: relative;
+
+    &::after{
+      content: "";
+      background: $bgColor;
+      mix-blend-mode: exclusion;
+      width: 100%;
+      height: 0;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transition: all .2s ease;
+    }
+
+    
+    &:hover::after{
+      height: 100%;
+    }
+  }
+
+  @if($hoverTextColor != 'none') {
+    &:hover {
+      color: $hoverTextColor;
     }
   }
 }
