--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -2,7 +2,7 @@
 
 %h1 {
   font-family: Din, sans-serif;
-  font-size: 48px;
+  font-size: 5vw;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
