--- a/src/pages/Contacts/Socials/Socials.scss
+++ b/src/pages/Contacts/Socials/Socials.scss
@@ -1,29 +1,55 @@
 @import "../../../styles/global.scss";
 
 .socials {
+  font-family: Din, sans-serif;
   background-color: $black;
   position: relative;
-  
   transform: translate(-50%, -50%);
 
   &__title {
     text-align: center;
-    padding-top: 60px;
+    padding-top: 0.6vw;
   }
 
   &__list {
     display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
-    margin-top: 30px;
+    justify-content: space-between;
+    margin-top: 2.3vw;
+    padding-bottom: 2.3vw;
+    border-bottom: 0.2vw solid $white;
   }
 
   &__item {
     background-color: $white;
     color: $black;
-    padding: 6px 32px;
-    font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
+  }
+  
+  &__link {
+    padding: 1vw 5vw;
+    line-height: 4vw;
+    font-weight: bold;
+  }
+
+  &__text {
+    background: linear-gradient(90deg, rgba(81,160,152,1) 0%, rgba(9,121,82,1) 63%, rgba(73,141,78,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 2.3vw;
+
+    &_top {
+      display: flex;
+      gap: 2vw;
+      margin-bottom: 1.5vw;
+      max-width: 90%;
+      margin: 0 auto 2vw;
+    }
+
+    &_bottom {
+      text-align: center;
+      padding-bottom: 3vw;
+    }
   }
 }
