--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -11,3 +11,10 @@
   font-weight: bold;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Din";
+  src: url("../../../public/fonts/d-din/D-DIN-Italic.otf") format("opentype");
+  font-weight: normal;
+  font-style: italic;
+}
