--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,6 +6,8 @@ $cream: #e8c083;
 $golden: linear-gradient(338deg, #FADA68 6.94%, rgba(250, 218, 104, 0.44) 102.43%, rgba(250, 218, 104, 0.00) 178.02%);
 $grey: #adc2c5;
 $dark-grey: #2f2f2f;
+$light-cream: #f2eee9;
+$orange: #fa7a1f;
 
 /* -- Media Query Breakpoints -- */
 $phone: 320;
