--- a/src/components/Header/Navigation/NavList/NavList.scss
+++ b/src/components/Header/Navigation/NavList/NavList.scss
@@ -4,9 +4,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 9vw 4vw 3vh 2vw;
+  padding: 7vw 4vw 3vh 3vw;
   height: 100%;
   box-sizing: border-box;
+  font-size: 2vw;
+
+  @include mq() {
+    padding-top: 10vw;
+  }
 
   &__body {
     display: flex;
@@ -23,9 +28,10 @@
   &__link {
     color: black;
     cursor: pointer;
-    @include hoverForLinks($black, $white);
-    padding: 1.5vw 6px;
+    padding: 1.5vw 0.6vw;
     text-wrap: nowrap;
+
+    @include hoverForLinks($black, $white);
 
     &_item {
       position: relative;
