--- a/src/pages/Contacts/Socials/Socials.scss
+++ b/src/pages/Contacts/Socials/Socials.scss
@@ -9,6 +9,10 @@
   &__title {
     text-align: center;
     padding-top: 0.6vw;
+
+    @include mq($tablet-large) {
+      padding-top: 4vw;
+    }
   }
 
   &__list {
@@ -17,6 +21,13 @@
     margin-top: 2.3vw;
     padding-bottom: 2.3vw;
     border-bottom: 0.2vw solid $white;
+
+    @include mq() {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 3vw;
+      text-align: center;
+    }
   }
 
   &__item {
@@ -30,6 +41,10 @@
     padding: 1vw 5vw;
     line-height: 4vw;
     font-weight: bold;
+
+    @include mq() {
+      line-height: 8vw;
+    }
   }
 
   &__text {
@@ -45,11 +60,22 @@
       margin-bottom: 1.5vw;
       max-width: 90%;
       margin: 0 auto 2vw;
+
+      @include mq($tablet-large) {
+        display: none;
+      }
     }
 
     &_bottom {
       text-align: center;
       padding-bottom: 3vw;
+
+      @include mq() {
+        display: flex;
+        flex-direction: column;
+        gap: 3vw;
+        padding-bottom: 5vw;
+      }
     }
   }
 }
