--- a/src/pages/HomePage/Download/Download.scss
+++ b/src/pages/HomePage/Download/Download.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global.scss";
 
 .download {
-    height: 888px;
+    height: 27vw;
     position: relative;
     background-color: $black;
     
@@ -11,6 +11,16 @@
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1.5vw;
+
+
+        padding: 3vw 0;
+
+        border-top: 0.2vw solid white;
+        border-bottom: 0.2vw solid white;
     
         &__futere_title{
             font-size: 40px;
