--- a/src/pages/HomePage/Future/Future.scss
+++ b/src/pages/HomePage/Future/Future.scss
@@ -1,18 +1,24 @@
 @import "../../../styles/global.scss";
 
 .future {
-    height: 888px;
     position: relative;
-}
-  
-.text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    background: $shadow;
 
-    & p:first-child{
-        margin-bottom: 46px;
+    &__image {
+        object-position: left;
+        
+    }
+
+    &__text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+
+        display: flex;
+        flex-direction: column;
+        gap: 3vw;
     }
 }
+
