--- a/src/pages/HomePage/Hero/Hero.scss
+++ b/src/pages/HomePage/Hero/Hero.scss
@@ -3,10 +3,10 @@
 .hero {
   display: grid;
   grid-template-columns: repeat(14, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  gap: 20px;
+  grid-template-rows: repeat(8, 1fr);
+  gap: 1vw;
   justify-content: center;
-  margin: 7vw auto 0;
+  margin: 6vw auto 0;
 
   &__under_header {
     grid-row: 1;
@@ -21,15 +21,14 @@
 
   &__pop_up_button {
     background-color: $green-secondary;
-    width: 98px;
-    height: 88px;
-    justify-self: center;
-    align-self: end;
+    width: 7.5vw;
+    height: 6vw;
 
     transition: all 0.2s ease;
 
-    grid-row: 1;
-    grid-column: 1/3;
+    position: absolute;
+    left: 2vw;
+    top: 3vw;
 
     &:hover {
       opacity: 0.5;
@@ -39,9 +38,9 @@
   &__download {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 2vw;
 
-    grid-row: 3/4;
+    grid-row: 3/6;
     grid-column: 2/7;
 
     &_top {
@@ -59,13 +58,14 @@
 
       &_blur {
         color: $green-secondary;
-        margin-right: 22px;
+        margin-right: 1.5vw;
         filter: blur(2px);
       }
     }
 
     &_sub_title {
-      font-size: 32px;
+      text-align: center;
+      align-self: flex-start;
       background: $golden;
       background-clip: text;
       -webkit-background-clip: text;
@@ -79,7 +79,8 @@
       height: 80px;
       color: $white;
       text-transform: uppercase;
-      max-width: 319px;
+      width: 21vw;
+      height: 5.5vw;
       background: linear-gradient(
         90deg,
         #ea4646 6.07%,
@@ -103,21 +104,17 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
-    grid-row: 3/4;
+    grid-row: 3/6;
     grid-column: 10/14;
-
-    h1,
-    h2 {
-      color: $white;
-    }
 
     &_title {
       text-wrap: nowrap;
+      font-size: 3.5vw;
     }
 
     &__buttons {
       display: flex;
-      gap: 20px;
+      gap: 1vw;
       flex-wrap: wrap;
       flex-direction: row;
       align-content: flex-start;
@@ -129,8 +126,8 @@
       border: 1px solid $white;
       color: $white;
       text-transform: math-auto;
-      font-size: 20px;
-      padding: 6px;
+      font-size: 1.5vw;
+      padding: 0.6vw;
       position: relative;
       transition: color 0.4s ease;
 
@@ -141,16 +138,18 @@
       }
 
       &_leviathan {
-        border-radius: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5vw;
         text-align: center;
         background: $white;
         width: 100%;
-        height: 48px;
+        height: 4vw;
         color: $green-secondary;
         position: relative;
         z-index: 0;
         transition: all 0.3s ease;
-        padding: 8px;
 
         &:hover {
           color: $black;
