--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@ body {
   @extend %body-text;
   -ms-overflow-style: none;
   scrollbar-width: none;  
+  background-color: $dark-grey;
 }
 
 ::-webkit-scrollbar {
