--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -61,7 +61,7 @@
   text-align: center;
   font-size: 5vw;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: normal;
 
   @include mq() {
@@ -69,8 +69,12 @@
   }
 }
 
+.bold {
+  font-weight: 700;
+}
+
 body {
-  @extend %body-text
+  @extend %body-text;
 }
 
 h1 {
