--- a/src/pages/HomePage/Download/Download.scss
+++ b/src/pages/HomePage/Download/Download.scss
@@ -1,50 +1,66 @@
 @import "../../../styles/global.scss";
 
 .download {
-    height: 27vw;
-    position: relative;
-    background-color: $black;
-    
-    &__text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
+  height: 43vw;
+  position: relative;
+  background-color: $black;
 
-        display: flex;
-        flex-direction: column;
-        gap: 1.5vw;
+  &__text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 
+    display: flex;
+    flex-direction: column;
+    gap: 1.5vw;
 
-        padding: 3vw 0;
+    padding: 3vw 0;
 
-        border-top: 0.2vw solid white;
-        border-bottom: 0.2vw solid white;
-    
-        &__futere_title{
-            font-size: 40px;
-            margin-bottom: 40px;
-        }
-    
-        & p {
-            text-align: center;
-            font-family: Inter;
-            font-size: 20px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
-    
-            background: linear-gradient(91deg, #DDE4D3 5.6%, #F9B187 34.36%, #F1B1CC 59.53%, #F8FAAD 116.45%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-    
-        & a{
-            margin-bottom: 10px;
-        }
+    border-top: 0.2vw solid white;
+    border-bottom: 0.2vw solid white;
+
+    &__futere_title {
+      font-size: 40px;
+      margin-bottom: 40px;
     }
+
+    &__button {
+      border: 1px solid #5cb85c;
+    }
+
+    & p {
+      text-align: center;
+      font-family: Inter;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+
+      background: linear-gradient(
+        91deg,
+        #dde4d3 5.6%,
+        #f9b187 34.36%,
+        #f1b1cc 59.53%,
+        #f8faad 116.45%
+      );
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    & a {
+      margin-bottom: 10px;
+      border: 1px solid #5cb85c;
+      width: 44vw;
+      margin: 0 auto;
+      color: #5cb85c;
+      &:hover {
+        color: $black;
+        background-color: #fff;
+        transition: color 0.6s ease, background-color 0.6s ease;
+      }
+    }
+  }
 }
-
-
