--- a/src/components/Transition/Transition.scss
+++ b/src/components/Transition/Transition.scss
@@ -3,21 +3,34 @@
 .slide-in {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  width: 50%;
   height: 100vh;
-  z-index: 1000;
+  z-index: 9;
   background-color: $dark-grey;
   transform-origin: bottom;
 
+  &-1 {
+    left: 0;
+  }
+
+  &-2 {
+    right: 0;
+  }
 }
 .slide-out {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
+  width: 50%;
+  height: 100vh;
+  z-index: 9;
+  background-color: $dark-grey;
+  transform-origin: top;
+
+  &-1 {
     left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 1000;
-    background-color: $dark-grey;
-    transform-origin: top;
   }
+
+  &-2 {
+    right: 0;
+  }
+}
