--- a/src/pages/HomePage/Technology/Technology.scss
+++ b/src/pages/HomePage/Technology/Technology.scss
@@ -7,16 +7,11 @@
 
   &__title {
     display: flex;
-    font-size: 64px;
-    margin-bottom: 40px;
-    padding-bottom: 40px;
+    margin-bottom: 0.4vw;
+    padding-bottom: 0.4vw;
     font-weight: 700;
 
     border-bottom: 0.2vw solid white;
-
-    @include mq() {
-      font-size: 4vw;
-    }
   }
 
   &__text {
@@ -33,12 +28,8 @@
 
     padding: 3vw 0;
 
-    @include mq() {
-    }
-
     & p {
       text-align: center;
-      font-size: 24px;
       font-weight: 400;
 
       @include mq() {
@@ -51,24 +42,22 @@
 .button-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  gap: 0.4vw;
+
   & a {
     display: flex;
     flex-direction: column;
     padding: 11px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
+    font-size: 2vw;
+    gap: 0.5vw;
     text-align: center;
-    text-decoration: none;
-    color: #fff;
     transition: background-color 0.3s;
     align-items: center;
+
     & img {
       display: block;
-      height: 35px;
-      width: 35px;
+      height: 2.5vw;
+      width: 2.5vw;
     }
   }
 }
