--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,6 +23,7 @@
 @mixin hoverForLinks($bgColor, $hoverTextColor: 'none') {
   @include mq($tablet, '>') {
     position: relative;
+    transition: all .2s ease;
 
     &::after{
       content: "";
