--- a/src/pages/Contacts/Creators/Creators.scss
+++ b/src/pages/Contacts/Creators/Creators.scss
@@ -3,8 +3,8 @@
 .creators {
   background-color: $light-cream;
   width: 100vw;
-  position: relative;
-  top: -20vh;
+  position: absolute;
+  top: 146vh;
   color: $black;
   padding: 4vw 0;
 
