--- a/src/pages/HomePage/Download/Download.scss
+++ b/src/pages/HomePage/Download/Download.scss
@@ -22,8 +22,7 @@
     border-bottom: 0.2vw solid white;
 
     &__futere_title {
-      font-size: 40px;
-      margin-bottom: 40px;
+      margin-bottom: 0.4vw;
     }
 
     &__button {
@@ -32,9 +31,6 @@
 
     & p {
       text-align: center;
-      font-family: Inter;
-      font-size: 20px;
-      font-style: normal;
       font-weight: 500;
       line-height: normal;
 
