--- a/src/pages/HomePage/Leviathans/Leviathan.scss
+++ b/src/pages/HomePage/Leviathans/Leviathan.scss
@@ -4,7 +4,7 @@
   position: relative;
   height: 95vw;
   min-height: 1000px;
-  
+
   @include mq() {
     height: 145vw;
     min-height: auto;
@@ -49,7 +49,26 @@
       font-weight: 700 !important;
     }
   }
+  &__to_top {
+    text-align: center;
+    margin-bottom: 10px;
+    border: 1px solid $white;
+    color: $white;
+    background-color: $black;
+    width: 24vw;
+    margin: 0 auto;
 
+    position: absolute;
+    bottom: 7vw;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    &:hover {
+      color: $black;
+      background-color: $white;
+      transition: color 0.6s ease, background-color 0.6s ease;
+    }
+  }
   &__bottom {
     position: absolute;
     bottom: 2vw;
@@ -105,7 +124,7 @@
           left: 8vw;
         }
       }
-      
+
       &--4 {
         width: 9vw;
         position: absolute;
@@ -117,7 +136,7 @@
           left: 76vw;
         }
       }
-      
+
       &--5 {
         width: 8vw;
         position: absolute;
