--- a/src/pages/HomePage/Hero1/Hero.scss
+++ b/src/pages/HomePage/Hero1/Hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
   position: relative;
-  height: 100vh;
+  height: 120vh;
 
   &__under_header {
     position: absolute;
@@ -19,12 +19,12 @@
 
   .about {
     position: absolute;
-    left: 5vw;
-    bottom: 10vw;
+    left: 13vw;
+    bottom: 6vw;
     z-index: 1;
-    display: block;
+    display: flex;
     flex-direction: column;
-    gap: 1.8vw;
+    gap: 0.4vw;
 
     &_title {
       text-wrap: nowrap;
@@ -36,8 +36,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
 
-      grid-row: 3;
-      grid-column: 1/2;
+      font-size: 2vw;
     }
   }
 }
@@ -57,10 +56,30 @@
   }
 
   &__bottom {
-    background: url("../../../images/home/hero-part-2.png") no-repeat center;
+    background: url("../../../images/home/hero-part-2.png") no-repeat center bottom;
     bottom: -6%;
-    height: 60%;
+    height: 70%;
     background-size: cover;
     z-index: 0;
+  }
+
+  &__text {
+    color: $white;
+
+    font-family: Inter, sans-serif;
+    font-size: 7.6vw;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 116%;
+    letter-spacing: 0.4vw;
+    mix-blend-mode: soft-light;
+
+    position: absolute;
+    bottom: 54vh;
+    left: 13vw;
+    
+    display: flex;
+    align-items: flex-end;
+    gap: 6vw;
   }
 }
