--- a/src/pages/RoadMap/Events/Events.scss
+++ b/src/pages/RoadMap/Events/Events.scss
@@ -42,13 +42,11 @@
     margin-bottom: 8px;
     padding: 0 18px 8px;
     border-bottom: 0.2vw solid $black;
-    mix-blend-mode: difference;
-    color: cornflowerblue;
+    color: wheat;
   }
   
   &__type_event {
-    mix-blend-mode: difference;
-    color: cornflowerblue;
+    color: wheat;
   }
 }
 
