--- a/src/pages/MarketPlace/Head/SubHeader/SubHeader.scss
+++ b/src/pages/MarketPlace/Head/SubHeader/SubHeader.scss
@@ -32,6 +32,8 @@
     align-items: center;
     font-size: 2vw;
     text-wrap: nowrap;
+    padding: 1.2vw 2vw;
+    border-right: 0.2vw solid $white;
   }
 
   &__list {
