--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -7,7 +7,7 @@ $grey: #adc2c5;
 $dark-grey: #2f2f2f;
 $light-cream: #f2eee9;
 $orange: #fa7a1f;
-$golden: linear-gradient(338deg, #FADA68 6.94%, rgba(250, 218, 104, 0.44) 102.43%, rgba(250, 218, 104, 0.00) 178.02%);
+$golden: linear-gradient(338deg, #FADA68 6.94%, rgb(250 218 104) 102.43%, rgb(250 218 104) 178.02%);
 $shadow: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0));
 
 /* -- Media Query Breakpoints -- */
