--- a/src/pages/HomePage/Technology/Technology.scss
+++ b/src/pages/HomePage/Technology/Technology.scss
@@ -5,6 +5,11 @@
   position: relative;
   background-color: $black;
 
+  @include mq() {
+    height: 69vh;
+    min-height: 700px;
+  }
+
   &__title {
     display: flex;
     margin-bottom: 0.4vw;
@@ -12,6 +17,10 @@
     font-weight: 700;
 
     border-bottom: 0.2vw solid white;
+
+    @include mq() {
+      font-size: 6vw;
+    }
   }
 
   &__text {
@@ -28,12 +37,17 @@
 
     padding: 3vw 0;
 
+    @include mq() {
+      height: 100%;
+      justify-content: space-around;
+    }
+
     & p {
       text-align: center;
       font-weight: 400;
 
       @include mq() {
-        font-size: 2vw;
+        font-size: 4vw;
       }
     }
   }
@@ -42,6 +56,10 @@
 .button-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  
+  @include mq() {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   & a {
     display: flex;
@@ -53,10 +71,19 @@
     transition: background-color 0.3s;
     align-items: center;
 
+    @include mq() {
+      font-size: 5vw;
+    }
+    
     & img {
       display: block;
       height: 2.5vw;
       width: 2.5vw;
+      
+      @include mq() {
+        height: 6.5vw;
+        width: 6.5vw;
+      }
     }
   }
 }
