--- a/src/pages/HomePage/Leviathans/Leviathan.scss
+++ b/src/pages/HomePage/Leviathans/Leviathan.scss
@@ -63,6 +63,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    @include mq() {
+      display: none;
+    }
+
     &:hover {
       color: $black;
       background-color: $white;
