--- a/src/pages/MarketPlace/Head/SubHeader/SubHeader.scss
+++ b/src/pages/MarketPlace/Head/SubHeader/SubHeader.scss
@@ -11,6 +11,12 @@
   height: 5vw;
   padding: 0 1vw;
 
+  @include mq() {
+    margin-top: 20vw;
+    height: 14vw;
+    justify-content: space-around;
+  }
+
   &__menu {
     display: flex;
     align-items: center;
@@ -25,6 +31,11 @@
     padding: 1vw;
     width: 14vw;
     text-align: center;
+
+    @include mq() {
+      width: 26vw;
+      padding: 2vw;
+    }
   }
 
   &__logo {
@@ -34,6 +45,10 @@
     text-wrap: nowrap;
     padding: 1.2vw 2vw;
     border-right: 0.2vw solid $white;
+
+    @include mq() {
+      display: none;
+    }
   }
 
   &__list {
@@ -69,6 +84,10 @@
       background-color: $white;
       color: $black;
     }
+
+    @include mq() {
+      padding: 4vw 1.3vw;
+    }
   }
 
   &__list {
@@ -81,11 +100,19 @@
     background-color: $white;
     text-align: center;
 
+    @include mq() {
+      top: 11vw;
+      gap: 2.5vw;
+      padding-top: 3vw;
+    }
+
     &_item {
       display: flex;
       flex-direction: column;
       align-items: stretch;
       width: 100%;
+
+      @extend %link;
     }
   }
 
@@ -95,5 +122,9 @@
     position: relative;
     z-index: 2;
     @include hoverForLinks($black, $white);
+
+    @include mq() {
+      padding: 3.4vw 2vw;
+    }
   }
 }
