--- a/src/pages/HomePage/Hero1/Hero.scss
+++ b/src/pages/HomePage/Hero1/Hero.scss
@@ -27,16 +27,99 @@
 
   .about {
     position: absolute;
-    left: 13vw;
-    bottom: 6vw;
+    bottom: 10vw;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     gap: 0.4vw;
+    width: 80vw;
 
     @include mq() {
       left: 6vw;
       bottom: 16vw;
+    }
+
+    &__download {
+      position: relative;
+      color: $black;
+      @extend %link;
+      font-weight: bold;
+
+      &_button {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+        margin-top: 2vw;
+
+        padding: 2vw;
+        background: linear-gradient(
+          180deg,
+          #7af070 0%,
+          rgba(243, 255, 101, 0.69) 100%
+        );
+        transition: all 0.3s ease;
+
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+
+      &_text {
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: $light-cream;
+        font-size: 2.7vw;
+
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+      }
+
+      &_content {
+        height: 15vw;
+        width: 100%;
+        justify-content: space-evenly;
+      }
+
+      .download_os_choose {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+
+        &_text {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          gap:1vw;
+        }
+
+        &_logo {
+          width: 24%;
+          height: 24%;
+        }
+
+        &__button {
+          padding: 1vw;
+          background: linear-gradient(
+            180deg,
+            #7af070 0%,
+            rgba(243, 255, 101, 0.69) 100%
+          );
+          transition: all 0.3s ease;
+          font-size: 2.5vw;
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
     }
 
     &__title {
@@ -46,7 +129,7 @@
         font-size: 7vw;
       }
     }
-    
+
     &_sub_title {
       background: $golden;
       background-clip: text;
@@ -77,7 +160,8 @@
   }
 
   &__bottom {
-    background: url("../../../images/home/hero-part-2.png") no-repeat center bottom;
+    background: url("../../../images/home/hero-part-2.png") no-repeat center
+      bottom;
     bottom: -6%;
     height: 70%;
     background-size: cover;
@@ -98,7 +182,7 @@
     position: absolute;
     bottom: 54vh;
     left: 13vw;
-    
+
     display: flex;
     align-items: flex-end;
     gap: 6vw;
