--- a/src/pages/RoadMap/Head/Head.scss
+++ b/src/pages/RoadMap/Head/Head.scss
@@ -94,6 +94,7 @@
 
       &:last-child {
         margin-left: 2vw;
+        padding-left: 0.7vw;
         font-size: 2vw;
         align-self: flex-end;
         
