--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,3 +19,20 @@ body {
   max-width: 90vw;
   margin: 0 auto;
 }
+
+.cross {
+  position: absolute;
+  top: 7%;
+  left: 4%;
+  width: 3vw;
+  height: 3vw;
+  background: url("../images/home/cross.svg") no-repeat center;
+  background-position: 0;
+  background-size: 80%;
+  transition: all 0.3s ease;
+  mix-blend-mode: exclusion;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
