--- a/src/components/TechSupportIcon/TechSupportIcon.scss
+++ b/src/components/TechSupportIcon/TechSupportIcon.scss
@@ -3,16 +3,28 @@
 .tech-support-icon {
   position: fixed;
   bottom: 10%;
-  right: 10%;
+  right: 4%;
+  z-index: 9;
   display: inline-block;
   padding: 15px;
-  border-radius: 50%;
-
+  transition: all 0.3s ease;
+  width: 2vw;
+  height: 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
   background-color: $cream;
-
-  z-index: 1000;
-
+  mix-blend-mode: exclusion;
+  
   &:hover {
-    opacity: 0.8;
+    border-radius: 50%;
+    transform: scale(0.9);
+    opacity: 0.7;
   }
+}
+
+.support-image {
+  width: 70%;
+  height: 70%;
 }
