--- a/src/pages/HomePage/Hero1/Hero.scss
+++ b/src/pages/HomePage/Hero1/Hero.scss
@@ -27,7 +27,7 @@
 
   .about {
     position: absolute;
-    bottom: 10vw;
+    bottom: 4%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -97,7 +97,8 @@
           display: flex;
           align-items: center;
           flex-direction: column;
-          gap:1vw;
+          gap: 1vw;
+          font-size: 2.5vw;
         }
 
         &_logo {
@@ -113,7 +114,7 @@
             rgba(243, 255, 101, 0.69) 100%
           );
           transition: all 0.3s ease;
-          font-size: 2.5vw;
+          font-size: 2vw;
 
           &:hover {
             opacity: 0.7;
