--- a/src/components/TechSupportIcon/TechSupportIcon.scss
+++ b/src/components/TechSupportIcon/TechSupportIcon.scss
@@ -6,17 +6,18 @@
   right: 4%;
   z-index: 9;
   display: inline-block;
+  border-radius: 50%;
+
   padding: 15px;
   transition: all 0.3s ease;
-  width: 2vw;
-  height: 2vw;
+  width: 3vw;
+  height: 3vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   background-color: $cream;
-  mix-blend-mode: exclusion;
-  
+
   &:hover {
     border-radius: 50%;
     transform: scale(0.9);
