--- a/src/pages/HomePage/Hero1/Hero.scss
+++ b/src/pages/HomePage/Hero1/Hero.scss
@@ -13,6 +13,7 @@
     right: 3vw;
     top: 4.4vw;
     text-align: center;
+    line-height: normal;
     background: $golden;
     background-clip: text;
     -webkit-background-clip: text;
@@ -52,9 +53,10 @@
         display: flex;
         justify-content: center;
         cursor: pointer;
+        font-size: 1.5vw;
         margin-top: 2vw;
 
-        padding: 2vw;
+        padding: 1vw 2vw;
         background: linear-gradient(
           180deg,
           #7af070 0%,
@@ -98,7 +100,7 @@
           align-items: center;
           flex-direction: column;
           gap: 1vw;
-          font-size: 2.5vw;
+          font-size: 1.5vw;
         }
 
         &_logo {
@@ -107,19 +109,25 @@
         }
 
         &__button {
-          padding: 1vw;
+          padding: 1vw 2vw;
           background: linear-gradient(
             180deg,
             #7af070 0%,
             rgba(243, 255, 101, 0.69) 100%
           );
           transition: all 0.3s ease;
-          font-size: 2vw;
+          font-size: 1.2vw;
 
           &:hover {
             opacity: 0.7;
           }
         }
+      }
+      
+      .cross {
+        width: 1.5vw;
+        height: 1.5vw;
+        cursor: pointer;
       }
     }
 
