Fix Hero and fix syles supportButton

--- a/src/components/TechSupportIcon/TechSupportIcon.scss
+++ b/src/components/TechSupportIcon/TechSupportIcon.scss
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: $cream;
+  background-color: black;
 
   &:hover {
     border-radius: 50%;
