--- a/src/components/TechSupportIcon/TechSupportIcon.scss
+++ b/src/components/TechSupportIcon/TechSupportIcon.scss
@@ -18,6 +18,11 @@
 
   background-color: black;
 
+  @include mq() {
+    width: 8vw;
+    height: 8vw;
+  }
+
   &:hover {
     border-radius: 50%;
     transform: scale(0.9);
