--- a/src/pages/HomePage/Hero/Hero.scss
+++ b/src/pages/HomePage/Hero/Hero.scss
@@ -5,6 +5,7 @@
   height: 120vh;
 
   @include mq() {
+    margin-top: 10vw;
     height: 100vh;
   }
 
@@ -38,8 +39,16 @@
     width: 80vw;
 
     @include mq() {
-      left: 6vw;
-      bottom: 16vw;
+      flex-direction: column;
+      position: absolute;
+      bottom: 0;
+      left: 40%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      display: flex;
+      justify-content: space-between;
+      gap: 0.4vw;
+      width: 66vw;
     }
 
     &__download {
@@ -63,6 +72,10 @@
           rgba(243, 255, 101, 0.69) 100%
         );
         transition: all 0.3s ease;
+
+        @include mq() {
+          font-size: 5vw;
+        }
 
         &:hover {
           opacity: 0.7;
@@ -123,7 +136,7 @@
           }
         }
       }
-      
+
       .cross {
         width: 1.5vw;
         height: 1.5vw;
