--- a/src/pages/HomePage/Hero/PopUp/PopUp.scss
+++ b/src/pages/HomePage/Hero/PopUp/PopUp.scss
@@ -13,6 +13,11 @@
     position: absolute;
     left: 2vw;
     top: 6vw;
+    @include mq() {
+      width: 15vw;
+      height: 12vw;
+      top: 10vw;
+    }
 
     &:hover {
       opacity: 0.5;
@@ -24,7 +29,7 @@
     transform: translate(-50%, -50%);
     background-color: $dark-grey;
     z-index: 12;
-    
+
     text-align: center;
     display: flex;
     flex-direction: column;
