--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,6 +32,11 @@ body {
   transition: all 0.3s ease;
   mix-blend-mode: exclusion;
 
+  @include mq() {
+    width: 7vw;
+    height: 7vw;
+  }
+
   &:hover {
     opacity: 0.7;
   }
