--- a/src/components/PreLoader/PreLoader.scss
+++ b/src/components/PreLoader/PreLoader.scss
@@ -7,12 +7,13 @@
   height: 100vh;
   z-index: 1001;
   display: flex;
+  cursor: wait;
 
   &__blind {
     position: absolute;
     height: 100vh;
     width: 100%;
-    background-color: $black;
+    background-color: $dark-grey;
 
     &:nth-child(2) {
       right: 0;
